# viewskater-egui

./: .gitignore  Cargo.toml  README.md  build.rs  cargo-appimage.desktop
assets/: ViewSkater.icns  viewskater-egui.desktop
resources/macos/: Info.plist
scripts/: bundle-macos.sh
src/: about.rs  app.rs  build_info.rs  cache.rs  decode.rs  file_io.rs  main.rs  menu.rs  pane.rs  perf.rs  settings.rs  theme.rs
src/app/: handlers.rs
src/platform/: macos.rs
