[package]
name = "viewskater-egui"
version = "0.1.0"
edition = "2021"
description = "Fast image viewer built with egui"

[dependencies]
eframe = "0.31"
egui = "0.31"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "bmp",
    "webp",
    "gif",
    "tiff",
    "qoi",
    "tga",
] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
natord = "1.0"

[patch.crates-io]
winit = { git = "https://github.com/ggand0/winit.git", branch = "custom-dnd-0.30.13" }
egui-winit = { git = "https://github.com/ggand0/egui-winit-custom.git", branch = "main" }

[profile.opt-dev]
inherits = "release"
opt-level = 3
lto = false
codegen-units = 16
