[package]
name = "viewskater-egui"
version = "0.1.0"
edition = "2021"
description = "Fast image viewer built with egui"

[dependencies]
eframe = "0.31"
egui = "0.31"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "bmp",
    "webp",
    "gif",
    "tiff",
    "qoi",
    "tga",
] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
natord = "1.0"
rfd = "0.15"
webbrowser = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6"
sysinfo = "0.33"
libc = "0.2"

[build-dependencies]
chrono = "0.4"
winres = "0.1"

[patch.crates-io]
winit = { git = "https://github.com/ggand0/winit.git", branch = "custom-dnd-0.30.13" }
egui-winit = { git = "https://github.com/ggand0/egui-winit-custom.git", branch = "main" }

[package.metadata.appimage]
icon = "./assets/icon_256.png"

[package.metadata.bundle]
name = "ViewSkater"
identifier = "com.ggando.viewskater-egui"
icon = ["assets/ViewSkater.icns"]
short_description = "A fast image viewer built with egui"

[profile.opt-dev]
inherits = "release"
opt-level = 3
lto = false
codegen-units = 16
